# myshows-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-cli.md  skill.md
src/myshows_cli/: __init__.py  cli.py  client.py  config.py  service.py
tests/: test_cli.py  test_client.py  test_config.py  test_service.py
