[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "myshows-agent-cli"
version = "0.1.1"
description = "Minimal MyShows CLI for agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=9.0,<10",
  "ruff>=0.12,<1",
]

[project.scripts]
myshows = "myshows_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/myshows_cli"]
